<resources>
    <string name="app_name">Japor</string>
    <string name="dummy_email">johndoe@gmail.com</string>
    <string name="dummy_password">******</string>
    <string name="dummy_fullname">John Doe</string>
    <string name="dummy_nik">1234567887654321</string>
    <string name="sign_up">Daftar</string>
    <string name="password">Sandi</string>
    <string name="email">Email</string>
    <string name="nik">NIK</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="password_confirmation">Konfirmasi Sandi</string>
    <string name="sign_in">Masuk</string>
    <string name="forgot_password">Lupa sandi?</string>
    <string name="send_email_verification">Kirim</string>
    <string name="sign_out">Keluar</string>
    <string name="empty">Data kosong!</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="judul">Judul</string>
    <string name="tulis_judul_laporan">Tulis judul laporan</string>
    <string name="keterangan">Keterangan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tulis_deskripsi_laporan">Tulis deskripsi laporan</string>
    <string name="category">Kategori</string>
    <string name="kirim">Kirim</string>
    <string name="damaged_nroads">Damaged\nRoads</string>
    <string name="blocking_ntrees">Blocking\nTrees</string>
    <string name="wildfire">Wildfire</string>
    <string name="profil_kamu">Profil Kamu</string>
    <string name="catatan_laporan">Catatan Laporan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keluar">Keluar</string>
    <string name="bantuan">Bantuan</string>
    <string name="type_email_address">Tulis alamat email kamu</string>
    <string name="email_address">Alamat Email</string>
    <string name="type_your_email_address">Tulis alamat email kamu</string>
    <string name="tulis_password_kamu">Tulis password kamu</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="tulis_nik_kamu">Tulis NIK kamu</string>
    <string name="ulang_sandi">Ulang Sandi</string>
    <string name="tulis_ulang_password_kamu">Tulis ulang password kamu</string>
    <string name="silahkan_cek_email_kamu">Silahkan cek email kamu!!</string>
    <string name="laporan_anda">Laporan Kamu</string>
    <string name="lokasi">Lokasi</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="onboarding_one_desc">Melaporkan masalah dengan cara yang mudah, cepat, dan aman</string>
    <string name="onboarding_two_title">Mudah</string>
    <string name="onboarding_two_desc">Tangkap semua masalah hanya dengan kamera ponsel kamu</string>
    <string name="onboarding_three_title">Cepat</string>
    <string name="onboarding_three_desc">Deskripsikan masalah sesuai kategori yang telah direkomendasikan</string>
    <string name="onboarding_four_title">Aman</string>
    <string name="onboarding_four_desc">Serahkan semua masalah kamu kepada pihak terkait</string>
    <string name="foto_ulang">Foto Ulang</string>
    <string name="batalkan_laporan">Batalkan Laporan</string>
    <string name="untuk_petugas">Untuk Petugas</string>
    <string name="valid">Valid</string>
    <string name="tidak_valid">Tidak Valid</string>
    <string name="hapus_akun">Hapus Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="jalanan">Jalanan</string>
    <string name="kebakaran">Kebakaran</string>
    <string name="pohon_tumbang">Pohon Tumbang</string>
    <string name="kabar_terbaru">Kabar Terbaru</string>
</resources>