<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/profil_kamu"
        android:textColor="@color/black_700"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/btn_civ_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:civ_border_width="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_civ_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:textColor="@color/black_700"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        tools:text="John Doe" />

    <TextView
        android:id="@+id/tv_nik"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="@id/tv_name"
        android:gravity="center"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/grey_300"
        tools:text="123456787654321" />

    <TextView
        android:id="@+id/tv_my_list_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/catatan_laporan"
        android:textColor="@color/black_700"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_list_report"
        app:layout_constraintTop_toBottomOf="@id/tv_nik" />

    <TextView
        android:id="@+id/tv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/bantuan"
        android:textColor="@color/black_700"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_help"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/pengaturan"
        android:textColor="@color/black_700"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_setting"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/tv_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/hapus_akun"
        android:textColor="@color/black_700"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/tv_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/keluar"
        android:textColor="@color/black_700"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_signout"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_list_report"
        android:background="@color/white_500" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="@id/tv_name"
        android:background="@color/white_500"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@id/tv_help" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="@id/tv_name"
        android:background="@color/white_500"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="@id/tv_name"
        android:background="@color/white_500"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/tv_delete_account" />

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationZ="90dp" />

    <ProgressBar
        android:id="@+id/pb_fragment_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>